demo bar added with changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/stylesheets/screen.css ">
 </head>
 
-<body>
+<body class="front-page">
 
     <!-- main wrapper start -->
     <div class="main-wrapper ">
@@ -46,63 +46,63 @@
                                         <ul class="megamenu grid flex flex-wrap text-xl ">
 
                                             <li class="grid-item w-full lg:w-1/4">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border lg:border-b-0 border-t-0 border-l-0 items-center justify-center h-16 lg:h-32 block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border lg:border-b-0 border-t-0 border-l-0 items-center justify-center h-16 lg:h-32 block inner lg:px-2 lg:py-4 ">
                                                     Order Food
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
                                             <li class="grid-item w-full lg:w-1/4">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Book a Table
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
                                             <li class="grid-item w-full lg:w-1/2 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover h-16 lg:h-32 flex items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover h-16 lg:h-32 flex items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Collections
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
                                             <li class="grid-item w-full lg:w-1/4">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 lg:border-t-0 border-b-0 h-16 lg:h-32 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-l-0 lg:border-t-0 border-b-0 h-16 lg:h-32 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Lunch
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
                                             <li class="grid-item w-full lg:w-1/4">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Brakfast
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
                                             <li class="grid-item w-full lg:w-1/4">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Dinner
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
                                             <li class="grid-item w-full lg:w-1/4">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Luxury Dining
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
                                             <li class="grid-item w-full lg:w-1/2 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Pocket-Friendly Delivery
                                                 </a>
                                             </li>
                                             <!-- column end -->
 
                                             <li class="grid-item w-full lg:w-1/2 ">
-                                                <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                                <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                                     Drinks & Nightlife
                                                 </a>
                                             </li>
@@ -140,9 +140,9 @@
                                             </a>
                                         </li>
                                         <li class="navbar-top-links-dropdown-wrapper relative ">
-                                            <span class="block px-3 text-base lg:text-xl flex items-center">
-                                                <span class="block mr-2 lg:pt-2 ">EN</span>
-                                            <i class="lni-chevron-down block "></i>
+                                            <span class="block px-3 text-base lg:text-lg flex items-center">
+                                                <span class="block mr-2 lg:pt-1">EN</span>
+                                            <i class="lni-chevron-down block mt-1"></i>
                                             </span>
                                             <ul class="dropdown-inner absolute right-0 bg-white rounded overflow-hidden shadow-lg ">
                                                 <li>
@@ -312,7 +312,7 @@
                             <h3 class="text-4xl leading-none my-5 font-bold text-gray-800 text-shadow-light">Special
                                 <br> summer offers </h3>
                             <div>
-                                <a href="" class="transition inline-block tracking-wider font-semibold text-gray-700 hover:text-black uppercase border-b border-transparent hover:border-gray-500 text-sm">View
+                                <a href="menu.html" class="transition inline-block tracking-wider font-semibold text-gray-700 hover:text-black uppercase border-b border-transparent hover:border-gray-500 text-sm">View
                                     all offers</a>
                             </div>
                         </div>
@@ -323,51 +323,51 @@
                                 <!-- start feaured item -->
                                 <div class="w-full md:w-1/3 text-center">
                                     <div class="inner cursor-pointer featured-item relative flex justify-center items-center rounded py-24 md:py-0 h-auto md:h-64 mx-2">
-                                        <div>
+                                        <a href="single.html" class="block">
                                             <h4 class="font-bold featured-item-title text-lg capitalize text-gray-800">
                                                 Biryani</h4>
-                                            <div class="featured-image">
+                                            <span class="featured-image block">
                                                 <img src="assets/images/food-plates/1.png" class="inline-block md:block w-full px-8 md:px-0 md:w-4/5 mx-auto" alt="featured image 1">
-                                            </div>
-                                            <div class="featured-item-price">
+                                            </span>
+                                            <span class="featured-item-price block">
                                                 <span class="font-bold text-xl text-shadow-light text-gray-700">$10.50
                                                 </span>
-                                            </div>
-                                        </div>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                                 <!-- end feaured item -->
                                 <!-- start feaured item -->
                                 <div class="w-full md:w-1/3 text-center">
                                     <div class="inner cursor-pointer featured-item relative flex justify-center items-center rounded py-24 md:py-0 h-auto md:h-64 mx-2">
-                                        <div>
+                                        <a href="single.html" class="block">
                                             <h4 class="font-bold featured-item-title text-lg capitalize text-gray-700 mb-3">
                                                 Chicken Salad</h4>
-                                            <div class="featured-image">
+                                            <span class="featured-image block">
                                                 <img src="assets/images/food-plates/2.png" class="inline-block md:block w-full px-8 md:px-0 md:w-4/5 mx-auto" alt="featured image 1">
-                                            </div>
-                                            <div class="featured-item-price">
+                                            </span>
+                                            <span class="featured-item-price block">
                                                 <span class="font-bold text-xl text-shadow-light text-gray-700">$10.50
                                                 </span>
-                                            </div>
-                                        </div>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                                 <!-- end feaured item -->
                                 <!-- start feaured item -->
                                 <div class="w-full md:w-1/3 text-center">
                                     <div class="inner cursor-pointer featured-item relative flex justify-center items-center rounded py-24 md:py-0 h-auto md:h-64 mx-2">
-                                        <div>
+                                        <a href="single.html" class="block">
                                             <h4 class="font-bold featured-item-title text-lg capitalize text-gray-700 mb-3">
                                                 Fried rice</h4>
-                                            <div class="featured-image">
+                                            <span class="featured-image block">
                                                 <img src="assets/images/food-plates/3.png" class="inline-block md:block w-full px-8 md:px-0 md:w-4/5 mx-auto" alt="featured image 1">
-                                            </div>
-                                            <div class="featured-item-price">
+                                            </span>
+                                            <span class="featured-item-price block">
                                                 <span class="font-bold text-xl text-shadow-light text-gray-700">$10.50
                                                 </span>
-                                            </div>
-                                        </div>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                                 <!-- end feaured item -->
@@ -434,7 +434,7 @@
                                                 <p>Dunt voluptatibus quod corporis Pariatur, dolorem fugit deleniti quidem quia recusandae cupiditate, blanditiis incidunt voluptatem harum, illum quasi.</p>
                                             </div>
                                             <div class="readmore mt-5">
-                                                <a href="" class="transition inline-block tracking-wider font-semibold text-gray-700 hover:text-black uppercase border-b border-transparent hover:border-gray-500 text-sm">Read
+                                                <a href="menu.html" class="transition inline-block tracking-wider font-semibold text-gray-700 hover:text-black uppercase border-b border-transparent hover:border-gray-500 text-sm">Read
                                                     More</a>
                                             </div>
                                         </div>
@@ -1076,7 +1076,7 @@
             <h1>
                 <a class="hover:text-yellow-600 " href="https://getidea.net ">Download this theme from here.</a>
             </h1>
-            <small class="text-sm text-gray-600 ">For more themes visit <a class="hover:text-gray-900 " href="https://getidea.net ">www.getidea.net</a></small>
+            <small class="text-sm text-gray-600 ">For more visit <a class="hover:text-gray-900 " href="https://getidea.net ">www.getidea.net</a></small>
         </div>
     </div>
     <!-- Donwload Theme Bar End -->
