--- a/menu.html
+++ b/menu.html
@@ -40,63 +40,63 @@
                                 <ul class="megamenu grid flex flex-wrap text-xl ">
 
                                     <li class="grid-item w-full lg:w-1/4">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover flex border lg:border-b-0 border-t-0 border-l-0 items-center justify-center h-16 lg:h-32 block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border lg:border-b-0 border-t-0 border-l-0 items-center justify-center h-16 lg:h-32 block inner lg:px-2 lg:py-4 ">
                                             Order Food
                                         </a>
                                     </li>
                                     <!-- column end -->
 
                                     <li class="grid-item w-full lg:w-1/4">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-t-0 border h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                             Book a Table
                                         </a>
                                     </li>
                                     <!-- column end -->
 
                                     <li class="grid-item w-full lg:w-1/2 ">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover h-16 lg:h-32 flex items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover h-16 lg:h-32 flex items-center justify-center block inner lg:px-2 lg:py-4 ">
                                             Collections
                                         </a>
                                     </li>
                                     <!-- column end -->
 
                                     <li class="grid-item w-full lg:w-1/4">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 lg:border-t-0 border-b-0 h-16 lg:h-32 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-l-0 lg:border-t-0 border-b-0 h-16 lg:h-32 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                             Lunch
                                         </a>
                                     </li>
                                     <!-- column end -->
 
                                     <li class="grid-item w-full lg:w-1/4">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                             Brakfast
                                         </a>
                                     </li>
                                     <!-- column end -->
 
                                     <li class="grid-item w-full lg:w-1/4">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                             Dinner
                                         </a>
                                     </li>
                                     <!-- column end -->
 
                                     <li class="grid-item w-full lg:w-1/4">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                             Luxury Dining
                                         </a>
                                     </li>
                                     <!-- column end -->
 
                                     <li class="grid-item w-full lg:w-1/2 ">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-l-0 border-b-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                             Pocket-Friendly Delivery
                                         </a>
                                     </li>
                                     <!-- column end -->
 
                                     <li class="grid-item w-full lg:w-1/2 ">
-                                        <a href="# " class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
+                                        <a href="menu.html" class="text-gray-800 bg-theme-color-hover flex border border-b-0 border-l-0 border-r-0 h-16 items-center justify-center block inner lg:px-2 lg:py-4 ">
                                             Drinks & Nightlife
                                         </a>
                                     </li>
@@ -995,7 +995,7 @@
             <h1>
                 <a class="hover:text-yellow-600 " href="https://getidea.net ">Download this theme from here.</a>
             </h1>
-            <small class="text-sm text-gray-600 ">For more themes visit <a class="hover:text-gray-900 " href="https://getidea.net ">www.getidea.net</a></small>
+            <small class="text-sm text-gray-600 ">For more visit <a class="hover:text-gray-900 " href="https://getidea.net ">www.getidea.net</a></small>
         </div>
     </div>
     <!-- Donwload Theme Bar End -->
